--- a/templates/pico/bastion.yaml.j2
+++ b/templates/pico/bastion.yaml.j2
@@ -15,17 +15,23 @@ parameters:
   KeyName:
     description: Name of an existing ssh keypair
     type: string
-{%if create_network is equalto 1 %}
-  PrivateNet:
+{% if neutron_network is equalto 1 %}
+  PndaNet:
     description: Private network for pnda deployment
     type: string
+  private_key:
+    type: string
+  pnda_secgroup:
+    type: string
+{% if create_network is equalto 1 %}
   PrivateSubnet:
     description: Private network for pnda deployment
     type: string
   PublicNet:
     description: Private network for pnda deployment
     type: string
-{%endif%}
+{% endif %}
+{% endif %}
   Image:
     type: string
   name:
@@ -37,12 +43,6 @@ parameters:
   pnda_flavor:
     type: string
     default: standard
-{%if create_network is equalto 1 %}
-  private_key:
-    type: string
-  pnda_secgroup:
-    type: string
-{% endif %}
   signal_transport:
     type: string
     default: TEMP_URL_SIGNAL
@@ -63,7 +63,7 @@ parameters:
     type: string
 
 resources:
-{%if create_network is equalto 1 %}
+{% if neutron_network is equalto 1 %}
   sec_group:
     type: OS::Neutron::SecurityGroup
     properties:
@@ -84,10 +84,11 @@ resources:
   port:
     type: OS::Neutron::Port
     properties:
-      network: { get_param: PrivateNet }
+      network: { get_param: PndaNet }
+      security_groups: [{ get_resource: sec_group },{ get_param: pnda_secgroup }]
+{%if create_network is equalto 1 %}
       fixed_ips:
         - subnet_id: { get_param: PrivateSubnet }
-      security_groups: [{ get_resource: sec_group },{ get_param: pnda_secgroup }]
 
   floatingIP:
     type: OS::Neutron::FloatingIP
@@ -95,6 +96,8 @@ resources:
       floating_network_id: { get_param: PublicNet }
       port_id: { get_resource: port}
 {% endif %}
+{% endif %}
+
   deploy_package:
     type: OS::Heat::SoftwareDeployment
     properties:
@@ -119,9 +122,9 @@ resources:
             $roles$: 'bastion'
             $master_ip$: { get_param: SaltmasterIP }
             $keyname$: { get_param: 'OS::stack_name' }
-{%if create_network is equalto 1 %}
+{% if neutron_network is equalto 1 %}
             $private_key$: { get_param: private_key }
-{%endif%}
+{% endif %}
             $pnda_cluster$: { get_param: cluster_name }
             $$SPECIFIC_CONF$$: { get_param: specific_config }
   install_deployment:
@@ -142,9 +145,9 @@ resources:
         str_replace:
           template: {get_file: scripts/bastion_install.sh }
           params:
-{%if create_network is equalto 1 %}
+{% if neutron_network is equalto 1 %}
             $private_key$: { get_param: private_key }
-{%endif%}
+{% endif %}
             $keyname$: { get_param: 'OS::stack_name' }
             $os_user$: { get_param: os_user }
             $$SPECIFIC_CONF$$: { get_param: specific_config }
@@ -158,15 +161,15 @@ resources:
         get_resource: server
   server:
     type: OS::Nova::Server
-{%if create_network is equalto 1 %}
+{% if create_network is equalto 1 %}
     depends_on: floatingIP
-{%endif%}
+{% endif %}
     properties:
       name: { get_param: name }
       image: { get_param: Image }
       flavor: { get_param: Flavor}
       key_name: { get_param: KeyName }
-{%if create_network is equalto 1 %}
+{% if neutron_network is equalto 1 %}
       networks:
         - port: { get_resource: port }
 {% endif %}
