--- a/templates/pico/dn.yaml.j2
+++ b/templates/pico/dn.yaml.j2
@@ -16,18 +16,20 @@ parameters:
   KeyName:
     description: Name of an existing ssh keypair
     type: string
-{%if create_network is equalto 1 %}
-  PrivateNet:
-    description: Private network for pnda deployment
-    type: string
-  PrivateSubnet:
+{% if neutron_network is equalto 1 %}
+  PndaNet:
     description: Private network for pnda deployment
     type: string
   pnda_secgroup:
     type: string
   sec_group:
     type: string
-{%endif%}
+{% if create_network is equalto 1 %}   
+  PrivateSubnet:
+    description: Private network for pnda deployment
+    type: string
+{% endif %}  
+{% endif %}
   Image:
     type: string
   name:
@@ -68,15 +70,18 @@ parameters:
     default: ''
 
 resources:
-{%if create_network is equalto 1 %}
+{% if neutron_network is equalto 1 %}
   port:
     type: OS::Neutron::Port
     properties:
-      network: { get_param: PrivateNet }
+      network: { get_param: PndaNet }
+      security_groups: [{ get_param: sec_group }, { get_param: pnda_secgroup }]
+{% if create_network is equalto 1 %}      
       fixed_ips:
         - subnet_id: { get_param: PrivateSubnet }
-      security_groups: [{ get_param: sec_group }]
 {% endif %}
+{% endif %}
+
   install_config:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -127,9 +132,9 @@ resources:
       image: { get_param: Image }
       flavor: { get_param: Flavor }
       key_name: { get_param: KeyName }
-{%if create_network is equalto 1 %}
-      networks: [{ network: {get_param: PrivateNet}}]
-      security_groups: [{ get_param: sec_group }, { get_param: pnda_secgroup }]
+{%if neutron_network is equalto 1 %} 
+      networks:
+        - port: { get_resource: port }  
 {% endif %}
       software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
