--- a/templates/pico/pnda_cluster.yaml.j2
+++ b/templates/pico/pnda_cluster.yaml.j2
@@ -61,11 +61,15 @@ parameters:
     type: string
     description: >
       ID or name of public network for which floating IP addresses will be allocated
-  private_net:
-    type: string
   private_subnet:
     type: string
 {%endif%}
+
+{%if neutron_network is equalto 1 %}
+  pnda_net:
+    type: string
+{%endif%}
+
   KeyName:
     description: Name of an existing KeyPair to enable SSH access to the instances
     type: string
@@ -78,7 +82,7 @@ parameters:
     default: standard
   SaltmasterIP:
     type: string
-{%if create_network is equalto 1 %}
+{%if (create_network is equalto 1) or (attach_network is equalto 1) %}
   PndaSecGroup:
     type: string
   private_key:
@@ -104,7 +108,7 @@ parameters:
     type: string
 
 resources:
-{%if create_network is equalto 1 %}
+{% if neutron_network is equalto 1 %}
   KafkaSecGroup:
     type: OS::Neutron::SecurityGroup
     properties:
@@ -140,7 +144,8 @@ resources:
         - remote_ip_prefix: 0.0.0.0/0
           protocol: icmp
 {% endif %}
-{%if create_bastion is equalto 1 %}
+
+{% if create_bastion is equalto 1 %}
   bastion:
     type: OS::Pnda::bastion
     properties:
@@ -154,13 +159,17 @@ resources:
           template: '%stackname%-bastion'
           params:
             '%stackname%': { get_param: deployment_name }
-{%if create_network is equalto 1 %}
-      PrivateNet: { get_param: private_net }
-      PrivateSubnet: { get_param: private_subnet }
-      PublicNet: { get_param: public_net }
+            
+{%if neutron_network is equalto 1 %}
       private_key: { get_param: private_key }
       pnda_secgroup: { get_param: PndaSecGroup }
+      PndaNet: { get_param: pnda_net }
+{%if create_network is equalto 1 %}      
+      PrivateSubnet: { get_param: private_subnet }
+      PublicNet: { get_param: public_net }
 {% endif %}
+{% endif %}       
+
       KeyName: { get_param: BastionKeyName }
       SaltmasterIP: { get_param: SaltmasterIP }
       cluster_name: { get_param: deployment_name }
@@ -168,7 +177,7 @@ resources:
       PndaMirror: { get_param: PndaMirror }
       os_user: { get_param: os_user }
       specific_config: { get_param: specific_config }
-{%endif%}
+{% endif %}
 
   kafka:
     type: OS::Heat::ResourceGroup
@@ -190,12 +199,16 @@ resources:
                 '%stackname%': { get_param: deployment_name }
           NodeIndex: '%index%'
           SaltmasterIP: { get_param: SaltmasterIP }
-{%if create_network is equalto 1 %}
-          PrivateNet: { get_param: private_net }
-          PrivateSubnet: { get_param: private_subnet }
+
+{%if neutron_network is equalto 1 %}
           sec_group: { get_resource: KafkaSecGroup }
           pnda_secgroup: { get_param: PndaSecGroup }
+          PndaNet: { get_param: pnda_net }
+{%if create_network is equalto 1 %}
+          PrivateSubnet: { get_param: private_subnet }
 {% endif %}
+{% endif %}
+
           KeyName: { get_param: KeyName }
           cluster_name: { get_param: deployment_name }
           pnda_flavor: { get_param: PndaFlavor }
@@ -216,11 +229,15 @@ resources:
           template: '%stackname%-cdh-mgr1'
           params:
             '%stackname%': { get_param: deployment_name }
-{%if create_network is equalto 1 %}
-      PrivateNet: { get_param: private_net }
-      PrivateSubnet: { get_param: private_subnet }
+            
+{%if neutron_network is equalto 1 %}
       pnda_secgroup: { get_param: PndaSecGroup }
+      PndaNet: { get_param: pnda_net }      
+{%if create_network is equalto 1 %}
+      PrivateSubnet: { get_param: private_subnet }
+{% endif %} 
 {% endif %}
+
       KeyName: { get_param: KeyName }
       SaltmasterIP: { get_param: SaltmasterIP }
       cluster_name: { get_param: deployment_name }
@@ -242,11 +259,15 @@ resources:
           template: '%stackname%-cdh-edge'
           params:
             '%stackname%': { get_param: deployment_name }
-{%if create_network is equalto 1 %}
-      PrivateNet: { get_param: private_net }
-      PrivateSubnet: { get_param: private_subnet }
+
+{%if neutron_network is equalto 1 %}
       pnda_secgroup: { get_param: PndaSecGroup }
+      PndaNet: { get_param: pnda_net }
+{%if create_network is equalto 1 %}
+      PrivateSubnet: { get_param: private_subnet }
 {% endif %}
+{% endif %}
+
       KeyName: { get_param: KeyName }
       cluster_name: { get_param: deployment_name }
       SaltmasterIP: { get_param: SaltmasterIP }
@@ -273,13 +294,17 @@ resources:
               params:
                 '%stackname%': { get_param: deployment_name }
           NodeIndex: '%index%'
-{%if create_network is equalto 1 %}
-          PrivateNet: { get_param: private_net }
-          PrivateSubnet: { get_param: private_subnet }
-          sec_group: { get_resource: DNSecGroup }
-          volume_size: { get_param: DatanodeVolumeSize }
+
+{%if neutron_network is equalto 1 %}
+          sec_group: { get_resource: DNSecGroup }          
           pnda_secgroup: { get_param: PndaSecGroup }
+          PndaNet: { get_param: pnda_net }
+{%if create_network is equalto 1 %}
+          PrivateSubnet: { get_param: private_subnet }
 {% endif %}
+{% endif %}
+
+          volume_size: { get_param: DatanodeVolumeSize }
           KeyName: { get_param: KeyName }
           SaltmasterIP: { get_param: SaltmasterIP }
           cluster_name: { get_param: deployment_name }
