--- a/templates/standard/pnda_cluster.yaml.j2
+++ b/templates/standard/pnda_cluster.yaml.j2
@@ -69,7 +69,9 @@ parameters:
     type: string
     description: Flavor for the opentsdb node
     default: m1.large
-
+  os_user:
+    type: string
+    description: operating system user for provisioning
   image_id:
     type: string
     description: default image for pnda servers
@@ -293,6 +295,7 @@ resources:
       cluster_name: { get_param: deployment_name }
       pnda_flavor: { get_param: PndaFlavor }
       PndaMirror: { get_param: PndaMirror }
+      os_user: { get_param: os_user }
       specific_config: { get_param: specific_config }
 
   zookeeper:
