Revert "remove kafka tool as not working in offline env"

--- a/templates/pico/kafka.yaml.j2
+++ b/templates/pico/kafka.yaml.j2
@@ -96,7 +96,7 @@ resources:
 {%if create_volumes is equalto 1 %}
             $log_volume_id$: { get_resource: logvolume }
 {%endif%}
-            $roles$: 'kafka,kafka_manager,platform_testing_general,elk,zookeeper'
+            $roles$: 'kafka,kafka_manager,platform_testing_general,elk,zookeeper,kafka_tool'
             $$SPECIFIC_CONF$$: { get_param: specific_config }
   deploy_package:
     type: OS::Heat::SoftwareDeployment
