PNDA-3583: hadoop distro is now part of grains

--- a/templates/pico/bastion.yaml.j2
+++ b/templates/pico/bastion.yaml.j2
@@ -61,6 +61,8 @@ parameters:
     default: ''
   package_config:
     type: string
+  hadoop_distro:
+    type: string
 
 resources:
 {%if create_network is equalto 1 %}
@@ -124,6 +126,7 @@ resources:
 {%endif%}
             $pnda_cluster$: { get_param: cluster_name }
             $$SPECIFIC_CONF$$: { get_param: specific_config }
+            $hadoop_distro$: { get_param: hadoop_distro }
   install_deployment:
     type: OS::Heat::SoftwareDeployment
     depends_on: [ bastion_deployment, deploy_package ]
