--- a/templates/standard/dn.yaml.j2
+++ b/templates/standard/dn.yaml.j2
@@ -62,6 +62,8 @@ parameters:
     description: "Warning: Specific configuration that will be passed to bash scripts as associative array"
     type: string
     default: ''
+  hadoop_distro:
+    type: string
 
 resources:
   port:
@@ -87,6 +89,7 @@ resources:
             $hdfs_volume_id$: { get_resource: volume }
             $hadoop_role$: 'DATANODE'
             $$SPECIFIC_CONF$$: { get_param: specific_config }
+            $hadoop_distro$: { get_param: hadoop_distro }
   deploy_package:
     type: OS::Heat::SoftwareDeployment
     properties:
