--- a/templates/standard/kafka.yaml.j2
+++ b/templates/standard/kafka.yaml.j2
@@ -59,6 +59,8 @@ parameters:
     description: "Warning: Specific configuration that will be passed to bash scripts as associative array"
     type: string
     default: ''
+  hadoop_distro:
+    type: string
 
 resources:
   port:
@@ -84,6 +86,7 @@ resources:
             $log_volume_id$: { get_resource: logvolume }
             $roles$: 'kafka,kafka_tool'
             $$SPECIFIC_CONF$$: { get_param: specific_config }
+            $hadoop_distro$: { get_param: hadoop_distro }
   deploy_package:
     type: OS::Heat::SoftwareDeployment
     properties:
