--- a/templates/pico/dn.yaml.j2
+++ b/templates/pico/dn.yaml.j2
@@ -1,3 +1,11 @@
+# Definition for the datanode instance type
+# Specifies which bootstrap script to run to set up this instance type and which roles
+# to apply to this instance type
+
+# It is processed as a jinja2 template with the following parameters:
+#   - create_network: 0|1. Set to 1 to create network related resources or to 0 when running
+#                          for an openstack ironic bare-metal install
+
 heat_template_version: 2014-10-16
 
 parameters:
@@ -32,9 +40,6 @@ parameters:
   volume_size:
     type: number
     default: 200
-  mountpoint:
-    type: string
-    default: /dev/vdc
   cluster_name:
     type: string
   pnda_flavor:
@@ -42,10 +47,7 @@ parameters:
     default: default
   logvolume_size:
     type: number
-    default: 250
-  log_mountpoint:
-    type: string
-    default: /dev/vdb
+    default: 10
   signal_transport:
     type: string
     default: TEMP_URL_SIGNAL
@@ -75,7 +77,8 @@ resources:
             $flavor$: { get_param: pnda_flavor }
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
-            $volume_dev$: { get_param: log_mountpoint }
+            $log_volume_id$: { get_resource: logvolume }
+            $hdfs_volume_id$: { get_resource: volume }            
             $cloudera_role$: 'DATANODE'
   install_deployment:
     type: OS::Heat::SoftwareDeployment
@@ -112,10 +115,10 @@ resources:
       description: Volume for datanode
   volume_attachment:
     type: OS::Cinder::VolumeAttachment
+    depends_on: logvolume_attachment    
     properties:
       volume_id: { get_resource: volume }
       instance_uuid: { get_resource: server }
-      mountpoint: { get_param: mountpoint }
   logvolume:
     type: OS::Cinder::Volume
     properties:
@@ -123,11 +126,9 @@ resources:
       description: Volume for datanode logs
   logvolume_attachment:
     type: OS::Cinder::VolumeAttachment
-    depends_on: volume_attachment
     properties:
       volume_id: { get_resource: logvolume }
       instance_uuid: { get_resource: server }
-      mountpoint: { get_param: log_mountpoint }
 {%endif%}
 
 outputs:
