--- a/templates/pico/edge.yaml.j2
+++ b/templates/pico/edge.yaml.j2
@@ -1,3 +1,11 @@
+# Definition for the edge instance type
+# Specifies which bootstrap script to run to set up this instance type and which roles
+# to apply to this instance type
+
+# It is processed as a jinja2 template with the following parameters:
+#   - create_network: 0|1. Set to 1 to create network related resources or to 0 when running
+#                          for an openstack ironic bare-metal install
+
 heat_template_version: 2014-10-16
 
 parameters:
@@ -34,10 +42,7 @@ parameters:
     default: standard
   logvolume_size:
     type: number
-    default: 250
-  log_mountpoint:
-    type: string
-    default: /dev/vdb
+    default: 10
   signal_transport:
     type: string
     default: TEMP_URL_SIGNAL
@@ -80,8 +85,8 @@ resources:
             $flavor$: { get_param: pnda_flavor }
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
-            $volume_dev$: { get_param: log_mountpoint }
-            $roles$: 'cloudera_edge,console_frontend,console_backend_data_logger,console_backend_data_manager,graphite,gobblin,deployment_manager,package_repository,data_service,impala-shell,yarn-gateway,hbase_opentsdb_tables,hdfs_cleaner,master_dataset,elk,logserver,kibana_dashboard,jupyter,cloudera_manager,platform_testing_cdh,mysql_connector'
+            $log_volume_id$: { get_resource: logvolume }
+            $roles$: 'cloudera_edge,console_frontend,console_backend_data_logger,console_backend_data_manager,graphite,gobblin,deployment_manager,package_repository,data_service,impala-shell,yarn-gateway,hbase_opentsdb_tables,hdfs_cleaner,master_dataset,elk,logserver,kibana_dashboard,jupyter,cloudera_manager,platform_testing_cdh,mysql_connector,pnda_restart'
             $cloudera_role$: 'EDGE'
 
   install_deployment:
@@ -116,7 +121,6 @@ resources:
     properties:
       volume_id: { get_resource: logvolume }
       instance_uuid: { get_resource: server }
-      mountpoint: { get_param: log_mountpoint }
 {%endif%}
 
   server:
