--- a/templates/standard/dn.yaml.j2
+++ b/templates/standard/dn.yaml.j2
@@ -1,3 +1,7 @@
+# Definition for the datanode instance type
+# Specifies which bootstrap script to run to set up this instance type and which roles
+# to apply to this instance type
+
 heat_template_version: 2014-10-16
 
 parameters:
@@ -27,10 +31,7 @@ parameters:
     type: string
   volume_size:
     type: number
-    default: 200
-  mountpoint:
-    type: string
-    default: /dev/vdc
+    default: 50
   cluster_name:
     type: string
   pnda_secgroup:
@@ -40,15 +41,15 @@ parameters:
     default: default
   logvolume_size:
     type: number
-    default: 250
-  log_mountpoint:
-    type: string
-    default: /dev/vdb
+    default: 120
   signal_transport:
     type: string
   software_config_transport:
     type: string
-
+{%if create_datanodes_group is equalto 1 %}
+  scheduler_group_hint:
+    type: string
+{%endif%}
 
 resources:
   port:
@@ -69,7 +70,8 @@ resources:
             $flavor$: { get_param: pnda_flavor }
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
-            $volume_dev$: { get_param: log_mountpoint }
+            $log_volume_id$: { get_resource: logvolume }
+            $hdfs_volume_id$: { get_resource: volume }
             $cloudera_role$: 'DATANODE'
   install_deployment:
     type: OS::Heat::SoftwareDeployment
@@ -93,6 +95,11 @@ resources:
       software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
       config_drive: True
+{%if create_datanodes_group is equalto 1 %}
+      scheduler_hints: 
+        group: { get_param: scheduler_group_hint}
+{%endif%}
+
 
   volume:
     type: OS::Cinder::Volume
@@ -101,10 +108,10 @@ resources:
       description: Volume for datanode
   volume_attachment:
     type: OS::Cinder::VolumeAttachment
+    depends_on: logvolume_attachment
     properties:
       volume_id: { get_resource: volume }
       instance_uuid: { get_resource: server }
-      mountpoint: { get_param: mountpoint }
   logvolume:
     type: OS::Cinder::Volume
     properties:
@@ -112,11 +119,9 @@ resources:
       description: Volume for datanode logs
   logvolume_attachment:
     type: OS::Cinder::VolumeAttachment
-    depends_on: volume_attachment
     properties:
       volume_id: { get_resource: logvolume }
       instance_uuid: { get_resource: server }
-      mountpoint: { get_param: log_mountpoint }
 
 
 outputs:
