--- a/templates/standard/pnda_cluster.yaml.j2
+++ b/templates/standard/pnda_cluster.yaml.j2
@@ -1,3 +1,11 @@
+# pnda_cluster.yaml defines the instances to create for this flavor of PNDA
+# The resource_registry.yaml file defines which yaml template to apply to
+# each instance type, and these specific yaml files configure the
+# instance as required for that type of node.
+
+# It is processed as a jinja2 template with the following parameters:
+#   - create_network: 0|1. Set to 1 to create network related resources
+
 heat_template_version: 2014-10-16
 
 parameters:
@@ -91,9 +99,6 @@ parameters:
   DatanodeVolumeSize:
     default: 200
     type: number
-  DatanodeMountpoint:
-    default: /dev/vdc
-    type: string
 
   public_net:
     type: string
@@ -134,6 +139,52 @@ parameters:
     default: POLL_TEMP_URL
 
 resources:
+  MgrAAGroup:
+    type: OS::Nova::ServerGroup
+    properties:
+      name:
+        str_replace:
+          template:
+            cname-hzk-aagroup
+          params:
+            cname: { get_param: deployment_name }
+      policies: [anti-affinity]
+{%if create_zknodes_group is equalto 1 %}
+  ZkAAGroup:
+    type: OS::Nova::ServerGroup
+    properties:
+      name:
+        str_replace:
+          template:
+            cname-zknodes-aagroup
+          params:
+            cname: { get_param: deployment_name }
+      policies: [anti-affinity]
+{%endif%}
+{%if create_kafkanodes_group is equalto 1 %}
+  KafkaAAGroup:
+    type: OS::Nova::ServerGroup
+    properties:
+      name:
+        str_replace:
+          template:
+            cname-kafkanodes-aagroup
+          params:
+            cname: { get_param: deployment_name }
+      policies: [anti-affinity]
+{%endif%}
+{%if create_datanodes_group is equalto 1 %}
+  DataNodeAAGroup:
+    type: OS::Nova::ServerGroup
+    properties:
+      name:
+        str_replace:
+          template:
+            cname-datanodes-aagroup
+          params:
+            cname: { get_param: deployment_name }
+      policies: [anti-affinity]
+{%endif%}
   ZKSecGroup:
     type: OS::Neutron::SecurityGroup
     properties:
@@ -257,6 +308,9 @@ resources:
           cluster_name: { get_param: deployment_name }
           pnda_secgroup: { get_param: PndaSecGroup }
           pnda_flavor: { get_param: PndaFlavor }
+{%if create_zknodes_group is equalto 1 %}
+          scheduler_group_hint: { get_resource: ZkAAGroup}
+{%endif%}
   kafka:
     type: OS::Heat::ResourceGroup
     properties:
@@ -282,6 +336,9 @@ resources:
           cluster_name: { get_param: deployment_name }
           pnda_secgroup: { get_param: PndaSecGroup }
           pnda_flavor: { get_param: PndaFlavor }
+{%if create_kafkanodes_group is equalto 1 %}
+          scheduler_group_hint: { get_resource: KafkaAAGroup}
+{%endif%}
   tools:
     type: OS::Heat::ResourceGroup
     properties:
@@ -383,6 +440,7 @@ resources:
       pnda_secgroup: { get_param: PndaSecGroup }
       cluster_name: { get_param: deployment_name }
       pnda_flavor: { get_param: PndaFlavor }
+      scheduler_group_hint: { get_resource: MgrAAGroup}
   manager2:
     type: OS::Pnda::manager2
     properties:
@@ -402,6 +460,7 @@ resources:
       pnda_secgroup: { get_param: PndaSecGroup }
       cluster_name: { get_param: deployment_name }
       pnda_flavor: { get_param: PndaFlavor }
+      scheduler_group_hint: { get_resource: MgrAAGroup}
   manager3:
     type: OS::Pnda::manager3
     properties:
@@ -440,6 +499,7 @@ resources:
       pnda_secgroup: { get_param: PndaSecGroup }
       cluster_name: { get_param: deployment_name }
       pnda_flavor: { get_param: PndaFlavor }
+      scheduler_group_hint: { get_resource: MgrAAGroup}
   edge:
     type: OS::Pnda::edge
     properties:
@@ -482,10 +542,12 @@ resources:
           SaltmasterIP: { get_param: SaltmasterIP }
           sec_group: { get_resource: DNSecGroup }
           volume_size: { get_param: DatanodeVolumeSize }
-          mountpoint: { get_param: DatanodeMountpoint }
           cluster_name: { get_param: deployment_name }
           pnda_secgroup: { get_param: PndaSecGroup }
           pnda_flavor: { get_param: PndaFlavor }
+{%if create_datanodes_group is equalto 1 %}
+          scheduler_group_hint: { get_resource: DataNodeAAGroup}
+{%endif%}
   opentsdb:
     type: OS::Heat::ResourceGroup
     properties:
