--- a/templates/pico/dn.yaml.j2
+++ b/templates/pico/dn.yaml.j2
@@ -6,7 +6,7 @@
 #   - create_network: 0|1. Set to 1 to create network related resources or to 0 when running
 #                          for an openstack ironic bare-metal install
 
-heat_template_version: 2014-10-16
+heat_template_version: 2015-04-30
 
 parameters:
   Flavor:
@@ -54,7 +54,18 @@ parameters:
   software_config_transport:
     type: string
     default: POLL_TEMP_URL
-
+  pre_config:
+    type: string
+  package_config:
+    type: string
+  PndaMirror:
+    description: URL of a mirror for operating system package download
+    type: string
+    default: ''
+  specific_config:
+    description: "Warning: Specific configuration that will be passed to bash scripts as associative array"
+    type: string
+    default: ''
 
 resources:
 {%if create_network is equalto 1 %}
@@ -74,16 +85,33 @@ resources:
         str_replace:
           template: {get_file: scripts/base_install.sh }
           params:
+            $pnda_mirror$: { get_param: PndaMirror }
             $flavor$: { get_param: pnda_flavor }
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
+{%if create_volumes is equalto 1 %}
             $log_volume_id$: { get_resource: logvolume }
-            $hdfs_volume_id$: { get_resource: volume }            
+            $hdfs_volume_id$: { get_resource: volume }
+{%endif%}
             $cloudera_role$: 'DATANODE'
+            $$SPECIFIC_CONF$$: { get_param: specific_config }
+  deploy_package:
+    type: OS::Heat::SoftwareDeployment
+    properties:
+      signal_transport: { get_param: signal_transport }
+      config:
+        get_param: package_config
+      server:
+        get_resource: server
+      actions:
+        - CREATE
+
   install_deployment:
     type: OS::Heat::SoftwareDeployment
 {%if create_volumes is equalto 1 %}
-    depends_on: [ volume_attachment, logvolume_attachment ]
+    depends_on: [ deploy_package, volume_attachment, logvolume_attachment ]
+{%else%}
+    depends_on: [ deploy_package ]
 {%endif%}
     properties:
       signal_transport: { get_param: signal_transport }
@@ -105,6 +133,7 @@ resources:
 {% endif %}
       software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
+      user_data: { get_param: pre_config }
       config_drive: True
 
 {%if create_volumes is equalto 1 %}
