--- a/templates/pico/pnda_cluster.yaml.j2
+++ b/templates/pico/pnda_cluster.yaml.j2
@@ -7,7 +7,7 @@
 #   - create_network: 0|1. Set to 1 to create network related resources or to 0 when running
 #                          for an openstack ironic bare-metal install
 
-heat_template_version: 2014-10-16
+heat_template_version: 2015-04-30
 
 parameters:
   SaltmasterFlavor:
@@ -37,16 +37,24 @@ parameters:
   image_id:
     type: string
     description: default image for pnda servers
-    default: ubuntu1404
-
+  os_user:
+    type: string
+    description: operating system user for provisioning
   DataNodes:
     default: '1'
     description: Number of DATA nodes
     type: string
-
+  KafkaNodes:
+    default: '1'
+    description: Number of KAFKA nodes
+    type: string
   DatanodeVolumeSize:
     default: 10
     type: number
+  specific_config:
+    description: "Warning: Specific configuration that will be passed to bash scripts as associative array"
+    type: string
+    default: ''
 
 {%if create_network is equalto 1 %}
   public_net:
@@ -68,9 +76,6 @@ parameters:
     description: pnda flavor
     type: string
     default: standard
-  git_private_key_file:
-    description: private key file for cloning from git
-    type: string
   SaltmasterIP:
     type: string
 {%if create_network is equalto 1 %}
@@ -89,6 +94,14 @@ parameters:
   software_config_transport:
     type: string
     default: POLL_TEMP_URL
+  PndaMirror:
+    description: URL of a mirror for operating system package download
+    type: string
+    default: ''
+  pre_config:
+    type: string
+  package_config:
+    type: string
 
 resources:
 {%if create_network is equalto 1 %}
@@ -133,6 +146,7 @@ resources:
     properties:
       signal_transport: { get_param: signal_transport }
       software_config_transport: { get_param: software_config_transport }
+      package_config: { get_param: package_config }
       Flavor: { get_param: BastionFlavor }
       Image: { get_param: image_id }
       name:
@@ -151,17 +165,22 @@ resources:
       SaltmasterIP: { get_param: SaltmasterIP }
       cluster_name: { get_param: deployment_name }
       pnda_flavor: { get_param: PndaFlavor }
+      PndaMirror: { get_param: PndaMirror }
+      os_user: { get_param: os_user }
+      specific_config: { get_param: specific_config }
 {%endif%}
 
   kafka:
     type: OS::Heat::ResourceGroup
     properties:
-      count: 1
+      count: { get_param: KafkaNodes }
       resource_def:
         type: OS::Pnda::kafka
         properties:
           signal_transport: { get_param: signal_transport }
           software_config_transport: { get_param: software_config_transport }
+          pre_config: { get_param: pre_config }
+          package_config: { get_param: package_config }
           Flavor: { get_param: KafkaFlavor }
           Image: { get_param: image_id }
           name:
@@ -180,12 +199,16 @@ resources:
           KeyName: { get_param: KeyName }
           cluster_name: { get_param: deployment_name }
           pnda_flavor: { get_param: PndaFlavor }
+          PndaMirror: { get_param: PndaMirror }
+          specific_config: { get_param: specific_config }
 
   manager1:
     type: OS::Pnda::manager1
     properties:
       signal_transport: { get_param: signal_transport }
       software_config_transport: { get_param: software_config_transport }
+      pre_config: { get_param: pre_config }
+      package_config: { get_param: package_config }
       Flavor: { get_param: Manager1Flavor }
       Image: { get_param: image_id }
       name:
@@ -202,12 +225,16 @@ resources:
       SaltmasterIP: { get_param: SaltmasterIP }
       cluster_name: { get_param: deployment_name }
       pnda_flavor: { get_param: PndaFlavor }
+      PndaMirror: { get_param: PndaMirror }
+      specific_config: { get_param: specific_config }
 
   edge:
     type: OS::Pnda::edge
     properties:
       signal_transport: { get_param: signal_transport }
       software_config_transport: { get_param: software_config_transport }
+      pre_config: { get_param: pre_config }
+      package_config: { get_param: package_config }
       Flavor: { get_param: EdgeFlavor }
       Image: { get_param: image_id }
       name:
@@ -224,6 +251,9 @@ resources:
       cluster_name: { get_param: deployment_name }
       SaltmasterIP: { get_param: SaltmasterIP }
       pnda_flavor: { get_param: PndaFlavor }
+      PndaMirror: { get_param: PndaMirror }
+      specific_config: { get_param: specific_config }
+
   dn:
     type: OS::Heat::ResourceGroup
     properties:
@@ -233,6 +263,8 @@ resources:
         properties:
           signal_transport: { get_param: signal_transport }
           software_config_transport: { get_param: software_config_transport }
+          pre_config: { get_param: pre_config }
+          package_config: { get_param: package_config }
           Flavor: { get_param: DatanodeFlavor }
           Image: { get_param: image_id }
           name:
@@ -252,6 +284,8 @@ resources:
           SaltmasterIP: { get_param: SaltmasterIP }
           cluster_name: { get_param: deployment_name }
           pnda_flavor: { get_param: PndaFlavor }
+          PndaMirror: { get_param: PndaMirror }
+          specific_config: { get_param: specific_config }
 
 outputs:
   kafka_hosts:
